# WeeB

./: .gitattributes  README.md  ide.html  index.html  permalink.html  weeb.js  weeb.js.mem  weeb.wasm  worker.js
WBC/: CMakeLists.txt  WBC.cpp  WBC.h  WeeB.cpp  WeeB.h
elvm/: eli.c.eir.js
examples/: truth-machine.wb
